welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:19: error: expected class or object definition
def faireV(c:Color){
^MethodsPictureLarge:36: error: expected class or object definition
def marquer(c:Color){
^MethodsPictureLarge:43: error: Unmatched closing brace '}' ignored here
}
^